examples/envoy_proxy/envoy/envoy.yaml
static_resources:

  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: /dev/stdout
          - name: envoy.access_loggers.http_grpc
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.grpc.v3.HttpGrpcAccessLogConfig
              common_config:
                grpc_service:
                  envoy_grpc:
                    cluster_name: service_accesslog
                buffer_size_bytes:
                  value: 0
                log_name: accesslogv3
                transport_api_version: V3
              additional_request_headers_to_log: ['slo-class', 'slo-domain', 'slo-app']
          http_filters:
          - name: envoy.filters.http.router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: service_neverssl_com
                  host_rewrite_literal: neverssl.com

  clusters:
  - name: service_accesslog
    connect_timeout: 6s
    type: LOGICAL_DNS
    load_assignment:
      cluster_name: service_accesslog
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: localhost
                port_value: 18090
    http2_protocol_options: {}

  - name: service_neverssl_com
    connect_timeout: 30s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: service_neverssl_com
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: neverssl.com
                port_value: 80
